# trusthalal

./: .gitignore  README.md
api/: .env.example  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 017b914c3349_add_place_owner_index.py  (+51 more)
api/app/: main.py
api/requests/: Test Authenticaiton.bru  bruno.json
api/scripts/: backfill_certificate_urls.py  create_review_demo_account.py  db_ping.py  expire_claims.py  export_openapi.py  issue_invite.py  reset_db.py  seed_dev.py
api/tests/: conftest.py  factories.py  test_account_deletion.py  test_admin_claim_events.py  test_admin_halal_claims.py  test_admin_invite_state.py  test_admin_org_verification.py  test_admin_place_owners.py  test_admin_places_lifecycle.py  test_admin_places_listing.py  test_admin_users_lifecycle.py  test_admin_verifier_status.py  test_auth_email_verification.py  test_auth_invite.py  test_auth_mobile.py  test_auth_reset.py  test_auth_signup.py  test_claim_lifecycle.py  test_consumer_disputes.py  test_consumer_preferences.py  test_email.py  test_email_hygiene.py  test_google_place_extractor.py  test_halal_claim_audit_trail.py  test_meat_products.py  test_notifications.py  test_org_polish_pass.py  test_owner_attachments.py  test_owner_claims.py  test_owner_halal_claims.py  test_owner_organizations.py  test_ownership_lifecycle.py  test_place_hours.py  test_place_ingest.py  test_place_link_external.py  test_place_photos_attribution.py  test_place_signals.py  test_public_halal_profile.py  test_rate_limit.py  test_reviews.py  (+7 more)
(+642 files in other folders)
